h1. CHANGELOG

h3. 3.0.4 June 29, 2014

* improve tests for Devise confirmable
* fix email settings for Sendgrid and Mandrill (fixes #302)
* raise error with versions older than Rails 4.1

h3. 3.0.3 June 26, 2014

* revert 'omniauth' recipe (make the change in rails_apps_pages instead)

h3. 3.0.2 June 26, 2014

* fix routes error in 'omniauth' recipe

h3. 3.0.1 June 26, 2014

* add 'locale' recipe (contributed by hedgesky)
* restore devise_invitable option
* remove 'capture email' feature from 'omniauth' recipe

h3. 3.0.0 June 20, 2014

* rename 'after_everything' as 'stage_three'
* rename 'after_bundler' as 'stage_two'
* rename 'tests4' recipe to 'tests'
* no longer supporting Rails 4.0 and earlier, remove Rails 4.1 logic
* remove code for CanCan
* support Pundit for authorization with OmniAuth
* add 'pages' recipe
* remove 'starter_app' option (replaced by 'pages' recipe)
* replace recipes 'model, view, controller' with recipes 'devise, omniauth, pundit'
* remove 'testing' recipe (partly replaced by 'tests4' recipe)
* remove options for Rails 3.2 example applications
* remove MongoDB option from database choices
* remove Mongoid-specific code

h3. 2.6.13 June 14, 2014

* generate RSpec tests for Pundit with the rails_apps_testing gem

h3. 2.6.12 June 6, 2014

* generate RSpec tests for OmniAuth with the rails_apps_testing gem
* Devise tests now generated by the rails_apps_testing gem

h3. 2.6.11 June 3, 2014

* for Devise, modify 'config/initializers/filter_parameter_logging.rb' file only for Rails 4.1
* update RSpec version for RSpec 3.0.0 final release

h3. 2.6.10 May 31, 2014

* revise 'rails-omniauth' recipe

h3. 2.6.9 May 29, 2014

* for custom application option with Devise, fixes https://github.com/RailsApps/rails-composer/issues/178
* for Devise, need 'domain_name' even without the email option (contributed by Jimmy Zhang)
* improve menu when 'Contributed applications' is selected

h3. 2.6.8 May 26, 2014
