@@ -18,6 +18,7 @@ requires: [git, railsapps,
   rails_devise,
   rails_devise_pundit,
   rails_signup_download,
+  rails_mailinglist_signup,
   setup, locale, readme, gems,
   tests,
   email,
